--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
             <img src="{{ g.user.image_url }}" alt="{{ g.user.username }}">
           </a>
         </li>
-        <li><button type="submit" class="btn btn-sm btn-primary" href="/messages/new">New Message</button></li>
+        <li><a href="/messages/new">New Message</a></li>
 
         <li>
         <form action="/logout" method="POST">
