--- a/templates/messages/create.html
+++ b/templates/messages/create.html
@@ -4,6 +4,7 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <form method="POST">
+        <!-- Is form.csrf_token right? -->
         {{ form.csrf_token }}
         <div>
           {% if form.text.errors %}
